--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "dern-support-blog",
   "version": "1.0.0",
@@ -8,7 +9,8 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
